# tidb

./: .bazelrc  .gitignore  DEPS.bzl  clean-testbin.sh  go.mod  go.sum
config/: BUILD.bazel  a_mctech.go  a_mctech_test.go  config.go  config_test.go  mctech_config.go
ddl/: BUILD.bazel  a_mctech.go  column.go  ddl_api.go  partition.go  placement_policy.go  table.go
distsql/: BUILD.bazel  a_mctech.go
domain/: BUILD.bazel  a_mctech.go  a_mctech_notest.go  domain.go
executor/: BUILD.bazel  a_mctech.go  a_mctech_test.go  builder.go  executor.go  infoschema_reader.go  infoschema_reader_test.go  main_test.go  prepared.go  reload_expr_pushdown_blacklist.go  show.go  show_test.go  stmtsummary.go  write.go
expression/: BUILD.bazel  a_builtin_mctech.go  a_mctech.go  a_mctech_test.go  builtin.go  builtin_mctech.go  (+4 more)
mctech/: BUILD.bazel  comment_test.go  const.go  context.go  context_test.go  extension.go  filter.go  handler.go  http_rpc.go  http_rpc_test.go  intercept.go  logger.go  logger_test.go  mock.go  mock_intest.go  option.go  resolver.go  trace.go
mctech/ddl/: BUILD.bazel  ddl_extension_visitor.go  ddl_extension_visitor_test.go  main_test.go  util.go
mctech/digestworker/: BUILD.bazel  digest_manager.go  digest_manager_test.go  main_test.go
mctech/interceptor/: BUILD.bazel  execute_inteceptor_test.go  interceptor.go  interceptor_test.go  intest.go  log.d.ts  logobject.go  notest.go  stats.go  traceutil.go
mctech/isolation/: BUILD.bazel  isolation_condition_visitor.go  isolation_condition_visitor_test.go  main_test.go  util.go
mctech/misc/: BUILD.bazel  main_test.go  misc_extension_visitor_test.go  msic_extension_visitor_test.go  util.go
mctech/mock/: BUILD.bazel  mock.go  mock_intest.go
mctech/msic/: BUILD.bazel  main_test.go  msic_extension_visitor_test.go  util.go
mctech/plan/: BUILD.bazel  join_where_test.go
mctech/prapared/: context.go  context_test.go  db_checker.go  db_checker_test.go  format.go  format_test.go  main_test.go  mctech_handler.go  mctech_handler_test.go  replace_action.go  replace_action_test.go  sql_preprocessor.go  sql_preprocessor_test.go  stmt_resolver.go  stmt_resolver_test.go
mctech/prepare/: BUILD.bazel  mctech_prepare_stmt.go
mctech/preps/: BUILD.bazel  cache.go  comment.go  context.go  context_test.go  db_checker.go  db_checker_test.go  db_index.go  db_index_test.go  format.go  format_test.go  main_test.go  mctech_handler.go  mctech_handler_test.go  preps_for_test.go  replace_action.go  replace_action_test.go  sql_preprocessor.go  sql_preprocessor_test.go  stmt_preprocessor.go  stmt_preprocessor_test.go
mctech/schema/: BUILD.bazel  custom_ddl_test.go  custom_schma_test.go  main_test.go
mctech/tenant/: tenant_visitor.go  tenant_visitor_test.go  types.go  util.go  visitor.go  visitor_test.go
mctech/udf/: BUILD.bazel  crypto_func.go  crypto_func_test.go  http_rpc.go  main_test.go  option.go  sequence_func.go  sequence_func_test.go  sql_trace_func.go  sql_trace_func_test.go  util.go
mctech/visitor/: BUILD.bazel  database_name_visitor.go  database_name_visitor_test.go  ddl_extension_visitor.go  ddl_extension_visitor_test.go  isolation_condition_visitor.go  isolation_condition_visitor_test.go  main_test.go  table_name_visitor.go  table_name_visitor_test.go  util.go
mctech/worker/: BUILD.bazel  cross_db_manager.go  cross_db_manager_test.go  digest_manager.go  digest_manager_test.go  main_test.go  worker_manager.go
pkg/mctech/: BUILD.bazel  comment.go  const.go  constant.go  context.go  context_test.go  extension.go  filter.go  handler.go  http_rpc.go  http_rpc_test.go  intercept.go  logger.go  logger_test.go  option.go
pkg/mctech/ddl/: BUILD.bazel  ddl_extension_visitor.go  ddl_extension_visitor_test.go  main_test.go  util.go
pkg/mctech/digestworker/: BUILD.bazel  digest_manager.go  digest_manager_test.go  main_test.go
pkg/mctech/interceptor/: BUILD.bazel  execute_inteceptor_test.go  interceptor.go  interceptor_test.go  intest.go  log.d.ts  logobject.go  notest.go  stats.go  traceutil.go
pkg/mctech/isolation/: BUILD.bazel  isolation_condition_visitor.go  isolation_condition_visitor_test.go  main_test.go  util.go
pkg/mctech/misc/: BUILD.bazel  main_test.go  misc_extension_visitor_test.go  util.go
pkg/mctech/mock/: BUILD.bazel  mock.go  mock_intest.go
pkg/mctech/msic/: BUILD.bazel  main_test.go  msic_extension_visitor_test.go  util.go
pkg/mctech/plan/: BUILD.bazel  join_where_test.go
pkg/mctech/prapared/: BUILD.bazel  context.go  context_test.go  db_checker.go  db_checker_test.go  format.go  format_test.go  main_test.go  mctech_handler.go  mctech_handler_test.go  replace_action.go  replace_action_test.go  sql_preprocessor.go  sql_preprocessor_test.go  stmt_resolver.go  stmt_resolver_test.go
pkg/mctech/prepare/: BUILD.bazel  mctech_prepare_stmt.go
pkg/mctech/preps/: BUILD.bazel  cache.go  comment.go  comment_test.go  context.go  context_test.go  db_checker.go  db_checker_test.go  db_index.go  db_index_test.go  format.go  format_test.go  main_test.go  mctech_handler.go  mctech_handler_test.go  preps_for_test.go  replace_action_test.go  sql_preprocessor.go  sql_preprocessor_test.go  stmt_preprocessor.go  stmt_preprocessor_test.go
pkg/mctech/schema/: BUILD.bazel  custom_ddl_test.go  custom_schma_test.go  main_test.go
pkg/mctech/tenant/: BUILD.bazel  tenant_visitor.go  tenant_visitor_test.go  types.go  util.go  visitor.go  visitor_test.go
pkg/mctech/tests/: BUILD.bazel  compatible_85_test.go
pkg/mctech/udf/: BUILD.bazel  crypto_func.go  crypto_func_test.go  option.go  sequence_func.go  sequence_func_test.go  sql_trace_func.go  sql_trace_func_test.go  util.go
pkg/mctech/visitor/: BUILD.bazel  database_name_visitor.go  database_name_visitor_test.go  ddl_extension_visitor.go  ddl_extension_visitor_test.go  isolation_condition_visitor.go  isolation_condition_visitor_test.go  main_test.go  table_name_visitor.go  table_name_visitor_test.go  util.go
pkg/mctech/worker/: BUILD.bazel  cross_db_manager.go  cross_db_manager_test.go  digest_manager.go  digest_manager_test.go  main_test.go  worker_manager.go
(+203 files in other folders)
