load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mctech",
    srcs = [
        "context.go",
        "filter.go",
        "handler.go",
        "http_rpc.go",
        "logger.go",
    ],
    importpath = "github.com/pingcap/tidb/mctech",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//parser/ast",
        "//sessionctx",
        "//util/intest",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@org_golang_x_exp//slices",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//buffer",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "mctech_test",
    timeout = "short",
    srcs = ["http_rpc_test.go"],
    embed = [":mctech"],
    flaky = True,
    deps = ["@com_github_stretchr_testify//require"],
)
