load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "interceptor",
    srcs = [
        "interceptor.go",
        "intest.go",  #keep
        "logobject.go",
        "notest.go",
        "stats.go",
        "traceutil.go",
    ],
    importpath = "github.com/pingcap/tidb/mctech/interceptor",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//executor",
        "//kv",
        "//mctech",
        "//mctech/prepare",
        "//parser",
        "//parser/ast",
        "//parser/format",
        "//planner/core",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//types",
        "//util/execdetails",
        "//util/logutil",
        "//util/texttree",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_tikv_client_go_v2//util",
        "@org_golang_x_exp//slices",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "interceptor_test",
    timeout = "short",
    srcs = [
        "execute_inteceptor_test.go",
        "interceptor_test.go",
    ],
    flaky = True,
    shard_count = 15,
    deps = [
        ":interceptor",
        "//extension",
        "//kv",
        "//mctech",
        "//mctech/mock",
        "//parser/auth",
        "//parser/mysql",
        "//server",
        "//testkit",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
    ],
)
