load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "msic",
    srcs = ["util.go"],
    importpath = "github.com/pingcap/tidb/mctech/msic",
    visibility = ["//visibility:public"],
    deps = [
        "//mctech",
        "//parser/ast",
        "//parser/model",
    ],
)

go_test(
    name = "msic_test",
    timeout = "short",
    srcs = [
        "main_test.go",
        "msic_extension_visitor_test.go",
    ],
    embed = [":msic"],
    flaky = True,
    deps = [
        "//mctech",
        "//parser",
        "//parser/format",
        "//parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)
