load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "preps",
    srcs = [
        "cache.go",
        "context.go",
        "db_checker.go",
        "db_index.go",
        "format.go",
        "mctech_handler.go",
        "replace_action.go",
        "sql_preprocessor.go",
        "stmt_preprocessor.go",
    ],
    importpath = "github.com/pingcap/tidb/mctech/preps",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//domain",
        "//mctech",
        "//mctech/ddl",
        "//mctech/interceptor",
        "//mctech/misc",
        "//mctech/visitor",
        "//mctech/worker",
        "//parser/ast",
        "//sessionctx",
        "//sessionctx/variable",
        "//util/intest",
        "//util/logutil",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@org_golang_x_exp//slices",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "preps_test",
    timeout = "short",
    srcs = [
        "db_checker_test.go",
        "db_index_test.go",
        "format_test.go",
        "main_test.go",
        "mctech_handler_test.go",
        "preps_for_test.go",
        "replace_action_test.go",
        "sql_preprocessor_test.go",
        "stmt_preprocessor_test.go",
    ],
    embed = [":preps"],
    flaky = True,
    shard_count = 13,
    deps = [
        "//config",
        "//kv",
        "//mctech",
        "//mctech/mock",
        "//mctech/worker",
        "//parser/ast",
        "//parser/auth",
        "//session",
        "//sessionctx",
        "//testkit",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
    ],
)
