load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "worker",
    srcs = ["digest_manager.go"],
    importpath = "github.com/pingcap/tidb/mctech/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//kv",
        "//parser/mysql",
        "//parser/terror",
        "//util",
        "//util/logutil",
        "//util/sqlexec",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_failpoint//:failpoint",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "worker_test",
    timeout = "short",
    srcs = [
        "digest_manager_test.go",
        "main_test.go",
    ],
    embed = [":worker"],
    flaky = True,
    deps = [
        "//mctech/mock",
        "//parser/mysql",
        "//testkit",
        "//util/sqlexec",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//util",
    ],
)
