load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "worker",
    srcs = [
        "cross_db_manager.go",
        "digest_manager.go",
        "worker_manager.go",
    ],
    importpath = "github.com/pingcap/tidb/mctech/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//kv",
        "//parser/mysql",
        "//parser/terror",
        "//types",
        "//util",
        "//util/logutil",
        "//util/sqlexec",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_failpoint//:failpoint",
        "@org_golang_x_exp//maps",
        "@org_golang_x_exp//slices",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "worker_test",
    timeout = "short",
    srcs = [
        "cross_db_manager_test.go",
        "digest_manager_test.go",
        "main_test.go",
    ],
    embed = [":worker"],
    flaky = True,
    deps = [
        "//domain",
        "//mctech/mock",
        "//parser/mysql",
        "//session",
        "//testkit",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//util",
    ],
)
