load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mctech",
    srcs = [
        "context.go",
        "filter.go",
        "handler.go",
        "http_rpc.go",
        "option.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/parser/ast",
        "//pkg/sessionctx",
        "//pkg/util/intest",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "mctech_test",
    timeout = "short",
    srcs = ["http_rpc_test.go"],
    embed = [":mctech"],
    flaky = True,
    deps = [
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
    ],
)
