load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "interceptor",
    srcs = [
        "interceptor.go",
        "intest.go",  #keep
        "logobject.go",
        "notest.go",
        "stats.go",
        "traceutil.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/interceptor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/executor",
        "//pkg/kv",
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/format",
        "//pkg/planner/core",
        "//pkg/planner/core/base",
        "//pkg/sessionctx",
        "//pkg/sessionctx/stmtctx",
        "//pkg/sessionctx/variable",
        "//pkg/util/execdetails",
        "//pkg/util/logutil",
        "//pkg/util/texttree",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_tikv_client_go_v2//util",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "interceptor_test",
    timeout = "short",
    srcs = [
        "execute_inteceptor_test.go",
        "interceptor_test.go",
    ],
    flaky = True,
    shard_count = 11,
    deps = [
        ":interceptor",
        "//pkg/extension",
        "//pkg/kv",
        "//pkg/mctech",
        "//pkg/mctech/mock",
        "//pkg/parser/auth",
        "//pkg/parser/mysql",
        "//pkg/server",
        "//pkg/testkit",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
    ],
)
