load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "misc",
    srcs = ["util.go"],
    importpath = "github.com/pingcap/tidb/pkg/mctech/misc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/model",
    ],
)

go_test(
    name = "misc_test",
    timeout = "short",
    srcs = [
        "main_test.go",
        "misc_extension_visitor_test.go",
    ],
    embed = [":misc"],
    flaky = True,
    deps = [
        "//pkg/mctech",
        "//pkg/parser",
        "//pkg/parser/format",
        "//pkg/parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)
