load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prapared",
    srcs = [
        "context.go",
        "db_checker.go",
        "format.go",
        "mctech_handler.go",
        "replace_action.go",
        "sql_preprocessor.go",
        "stmt_resolver.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/prapared",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/mctech/isolation",
        "//pkg/parser/ast",
        "//pkg/sessionctx",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_pingcap_errors//:errors",
    ],
)

go_test(
    name = "prapared_test",
    timeout = "short",
    srcs = [
        "context_test.go",
        "db_checker_test.go",
        "format_test.go",
        "main_test.go",
        "mctech_handler_test.go",
        "replace_action_test.go",
        "sql_preprocessor_test.go",
        "stmt_resolver_test.go",
    ],
    embed = [":prapared"],
    flaky = True,
    shard_count = 12,
    deps = [
        "//pkg/kv",
        "//pkg/mctech",
        "//pkg/parser/auth",
        "//pkg/parser/test_driver",
        "//pkg/session",
        "//pkg/session/types",
        "//pkg/testkit",
        "@com_github_stretchr_testify//require",
    ],
)
