load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "schema_test",
    timeout = "short",
    srcs = [
        "custom_schma_test.go",
        "main_test.go",
    ],
    flaky = True,
    deps = [
        "//pkg/kv",
        "//pkg/mctech",
        "//pkg/mctech/prapared",
        "//pkg/parser/auth",
        "//pkg/parser/test_driver",
        "//pkg/testkit",
        "@com_github_stretchr_testify//require",
    ],
)
