load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "schema_test",
    timeout = "short",
    srcs = ["custom_ddl_test.go"],
    flaky = True,
    shard_count = 6,
    deps = [
        "//pkg/kv",
        "//pkg/mctech",
        "//pkg/mctech/prapared",
        "//pkg/parser/auth",
        "//pkg/testkit",
        "@com_github_stretchr_testify//require",
    ],
)
