load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tenant",
    srcs = [
        "tenant_visitor.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/tenant",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/model",
        "//pkg/parser/opcode",
    ],
)

go_test(
    name = "tenant_test",
    timeout = "short",
    srcs = ["tenant_visitor_test.go"],
    embed = [":tenant"],
    flaky = True,
    deps = [
        "//pkg/mctech",
        "//pkg/parser",
        "//pkg/parser/format",
        "//pkg/parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)
