load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "udf",
    srcs = [
        "crypto_func.go",
        "sequence_func.go",
        "sql_trace_func.go",
    ],
    data = glob(["data/**"]),
    importpath = "github.com/pingcap/tidb/pkg/mctech/udf",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/mctech",
        "//pkg/types",
        "//pkg/util/logutil",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@org_golang_x_sync//semaphore",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "udf_test",
    timeout = "short",
    srcs = [
        "crypto_func_test.go",
        "sequence_func_test.go",
        "sql_trace_func_test.go",
    ],
    embed = [":udf"],
    flaky = True,
    shard_count = 11,
    deps = [
        "//pkg/mctech/mock",
        "//pkg/parser/mysql",
        "//pkg/types",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_stretchr_testify//require",
    ],
)
