load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tenant",
    srcs = [
        "util.go",
        "visitor.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/tenant",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/model",
        "//pkg/parser/opcode",
    ],
)

go_test(
    name = "tenant_test",
    timeout = "short",
    srcs = ["visitor_test.go"],
    embed = [":tenant"],
    flaky = True,
    deps = [
        "//pkg/mctech",
        "//pkg/parser",
        "//pkg/parser/format",
        "//pkg/parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)

go_library(
    name = "visitor",
    srcs = [
        "ddl_extension_visitor.go",
        "isolation_condition_visitor.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/visitor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/format",
        "//pkg/parser/model",
        "//pkg/parser/mysql",
        "//pkg/parser/opcode",
        "//pkg/parser/types",
        "@org_golang_x_exp//slices",
    ],
)

go_test(
    name = "visitor_test",
    srcs = [
        "ddl_extension_visitor_test.go",
        "isolation_condition_visitor_test.go",
        "main_test.go",
    ],
    embed = [":visitor"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser",
        "//pkg/parser/format",
        "//pkg/parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)
