load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "visitor",
    srcs = [
        "database_name_visitor.go",
        "isolation_condition_visitor.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/visitor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/model",
        "//pkg/parser/opcode",
    ],
)

go_test(
    name = "visitor_test",
    timeout = "short",
    srcs = [
        "database_name_visitor_test.go",
        "isolation_condition_visitor_test.go",
        "main_test.go",
    ],
    flaky = True,
    deps = [
        ":visitor",
        "//pkg/mctech",
        "//pkg/mctech/preps",
        "//pkg/parser",
        "//pkg/parser/format",
        "//pkg/parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)
